# tenxsqueeze

./: .gitignore  README.md  backtest_speed.txt  pyproject.toml
notebooks/: big3_backtest.ipynb  big3_scan.ipynb  market_data.ipynb  scan_analysis_mtf_consecutive.ipynb  scan_analysis_mtf_partial.ipynb  scan_analysis_stf_consecutive.ipynb  scan_analysis_stf_partial.ipynb
tenxsqueeze/: BacktraderResult.py  ProgressCerebro.py  __init__.py  backtrader_indicators.py  driver.py  pandas_indicators.py  plotting.py  run_batch.py  util.py
tenxsqueeze/sp500_analysis/: __init__.py  common.py  mtf.py  stf.py
tenxsqueeze/strategies/: BaseStrategy.py  MTFB3.py  TenXSqueeze.py  __init__.py
