[tool.black]
line-length = 119

[project]
name = "tenxsqueeze"
version = "1.0.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {email = "stefano.katsoras@gmail.com"},
  {name = "Stefano Katsoras"}
]
maintainers = [
  {email = "stefano.katsoras@gmail.com"},
  {name = "Stefano Katsoras"}
]
dependencies = [
  "backtrader",
  "TA-lib",
  "tabulate",
  "tqdm",
  "plotly"
]

[tool.setuptools]
packages = ["tenxsqueeze"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
